@@ -5,6 +5,7 @@ Enhancements
  - [web] show locale codes beside language names in Preferences module
  - [web] fixed visual glitches in Month view with Firefox
  - [web] mail editor can now be expanded horizontally and automatically expands vertically
+ - [web] compose a new message inline or in a popup window
 
 Bug fixes
  - [core] remove all alarms before sending IMIP replies (#3925)
